tests/snapshots/render/ansi@commonmark-spec-036-entity_and_numeric_character_references.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/036-entity_and_numeric_character_references.md
snapshot_kind: text
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33mf&ouml;f&ouml;[0m                                                              [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
