tests/snapshots/render/ansi@commonmark-spec-069-atx_headings.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/069-atx_headings.md
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m# foo                                                                       [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
